# R1RL

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: debug.ipynb
src/r1rl/: prompt.py  utils.py
src/r1rl/datasets/: __init__.py  base.py  gsm8k.py
tests/: test_utils.py
